--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@visx/pattern": "2.10.0",
     "apexcharts": "^3.35.2",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.3",
     "buffer": "^6.0.3",
     "classnames": "^2.2.6",
     "d3-fetch": "^2.0.0",
@@ -38,6 +39,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-beautiful-dnd": "^13.0.0",
+    "react-bootstrap": "^2.7.4",
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.18.0",
