--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "elstar",
   "version": "1.3.1",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@fullcalendar/daygrid": "^5.10.1",
     "@fullcalendar/interaction": "^5.10.1",
