--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "elstar",
   "version": "1.3.1",
   "private": true,
-  "proxy": "http://localhost:8080", 
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@fullcalendar/daygrid": "^5.10.1",
     "@fullcalendar/interaction": "^5.10.1",
@@ -42,12 +42,14 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^2.7.4",
     "react-custom-scrollbars-2": "^4.5.0",
+    "react-datepicker": "^4.12.0",
+    "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.18.0",
     "react-i18next": "^11.15.1",
     "react-icons": "^4.4.0",
     "react-markdown": "^6.0.3",
-    "react-modal": "^3.13.1",
+    "react-modal": "^3.16.1",
     "react-number-format": "^4.9.1",
     "react-popper": "^2.3.0",
     "react-portal": "^4.2.1",
