--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-table": "^7.7.0",
     "react-tooltip": "^4.2.21",
     "react-window": "^1.8.6",
+    "recharts": "^2.7.1",
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
     "source-map-explorer": "^2.5.2",
