--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "elstar",
   "version": "1.3.1",
   "private": true,
-  "proxy": "http://localhost:8080",
+  "proxy": "https://statistics-scheduling-system-api-production.up.railway.app",
   "dependencies": {
     "@fullcalendar/daygrid": "^5.10.1",
     "@fullcalendar/interaction": "^5.10.1",
